--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>zkSync Era Block Explorer</title>
+    <title>zkLink Nova Block Explorer</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="zkSync Era Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into zkSync Era and explore the network."/>
+    <meta name="description" content="zkLink Nova Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into zkLink Nova and explore the network."/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <meta property="og:title" content="zkSync Era Block Explorer" />
-    <meta property="og:description" content="zkSync Era Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into zkSync Era and explore the network." />
+    <meta property="og:title" content="zkLink Nova Block Explorer" />
+    <meta property="og:description" content="zkLink Nova Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into zkLink Nova and explore the network." />
     <meta property="og:image" content="https://explorer.zksync.io/preview.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="zkSync Era Block Explorer" />
+    <meta property="og:image:alt" content="zkLink Nova Block Explorer" />
 
-    <link rel="alternate icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" type="image/x-icon" href="/icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/icon.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true" />
