--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -13,14 +13,15 @@
       property="og:description"
       content="Sophon Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into Sophon and explore the network."
     />
-    <meta property="og:image" content="https://explorer.zksync.io/preview.png" />
+    <meta property="og:image" content="https://farm.sophon.xyz/og.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Sophon Block Explorer" />
 
     <link rel="alternate icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true" />
