First part of styling overhaul.

--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -23,12 +23,12 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="shortcut icon" href="/favicon.ico" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <script src="/config.js"></script>
   </head>
   <body>
