--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>zkSync Era Block Explorer</title>
+    <title>Sophon Block Explorer</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="zkSync Era Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into zkSync Era and explore the network."/>
+    <meta
+      name="description"
+      content="Sophon Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into Sophon and explore the network."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <meta property="og:title" content="zkSync Era Block Explorer" />
-    <meta property="og:description" content="zkSync Era Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into zkSync Era and explore the network." />
-    <meta property="og:image" content="https://explorer.zksync.io/preview.png" />
+    <meta property="og:title" content="Sophon Block Explorer" />
+    <meta
+      property="og:description"
+      content="Sophon Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into Sophon and explore the network."
+    />
+    <meta property="og:image" content="https://explorer.testnet.sophon.xyz/og.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="zkSync Era Block Explorer" />
+    <meta property="og:image:alt" content="Sophon Block Explorer" />
 
-    <link rel="alternate icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="shortcut icon" href="/favicon.ico" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    /> -->
     <script src="/config.js"></script>
-    
   </head>
   <body>
     <div id="app"></div>
