fix(ui): some button UI adjustments

--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>OpenChain Block Explorer</title>
+    <title>Openchain zkEVM block explorer</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="Some Open Chain Headline" />
+    <meta
+      name="description"
+      content="Sovereign data focused zkEVM Infrastructure to help Humanity build a perfect intelligence ecosystem together with AI Agents on $EARTH"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta property="og:title" content="OpenChain Block Explorer" />
     <meta property="og:description" content="Open Chain Headline" />
