--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -15,10 +15,20 @@
 
     <link rel="alternate icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="true" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link
+    rel="preload"
+    href="https://d2ysxj5jxlkqx4.cloudfront.net/fonts/Millik.woff2"
+    as="font"
+    type="font/woff2"
+    crossOrigin="anonymous"
+  />
+  <link
+    rel="preload"
+    href="https://d2ysxj5jxlkqx4.cloudfront.net/fonts/ABCWhyteVariable.woff2"
+    as="font"
+    type="font/woff2"
+    crossOrigin="anonymous"
+  />
     <script src="/config.js"></script>
     
   </head>
