--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>ZKsync Era Block Explorer</title>
+    <title>Double Zero Block Explorer</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="ZKsync Era Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into ZKsync Era and explore the network."/>
+    <meta name="description" content="Double Zero Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into ZKsync Era and explore the network."/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <meta property="og:title" content="ZKsync Era Block Explorer" />
+    <meta property="og:title" content="Double Zero Block Explorer" />
     <meta property="og:description" content="ZKsync Era Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into ZKsync Era and explore the network." />
     <meta property="og:image" content="https://explorer.zksync.io/preview.png" />
     <meta property="og:image:type" content="image/png" />
