--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -3,11 +3,17 @@
   <head>
     <title>Treasurescan</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="Treasurescan provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into transactions and explore the network."/>
+    <meta
+      name="description"
+      content="Treasurescan provides all the information to dive into transactions, blocks, contracts, tokens, NFTs, and much more within the Treasure network."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta property="og:title" content="Treasurescan" />
-    <meta property="og:description" content="Treasurescan provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into transactions and explore the network." />
-    <meta property="og:image" content="https://explorer.zksync.io/treasure_preview.png" />
+    <meta
+      property="og:description"
+      content="Treasurescan provides all the information to dive into transactions, blocks, contracts, tokens, NFTs, and much more within the Treasure network."
+    />
+    <meta property="og:image" content="https://treasurescan.io/social.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -16,21 +22,20 @@
     <link rel="alternate icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link
-    rel="preload"
-    href="https://d2ysxj5jxlkqx4.cloudfront.net/fonts/Millik.woff2"
-    as="font"
-    type="font/woff2"
-    crossOrigin="anonymous"
-  />
-  <link
-    rel="preload"
-    href="https://d2ysxj5jxlkqx4.cloudfront.net/fonts/ABCWhyteVariable.woff2"
-    as="font"
-    type="font/woff2"
-    crossOrigin="anonymous"
-  />
+      rel="preload"
+      href="https://d2ysxj5jxlkqx4.cloudfront.net/fonts/Millik.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="https://d2ysxj5jxlkqx4.cloudfront.net/fonts/ABCWhyteVariable.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
     <script src="/config.js"></script>
-    
   </head>
   <body>
     <div id="app"></div>
