chore: updating favicons

--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -19,8 +19,10 @@
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Sophon Block Explorer" />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-logo@1x.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-logo@2x.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-logo@3x.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/favicon-logo@4x.png" />
     <link rel="shortcut icon" href="/favicon.ico" />
 
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
