--- a/packages/app/index.html
+++ b/packages/app/index.html
@@ -13,7 +13,7 @@
       property="og:description"
       content="Sophon Block Explorer provides all the information to deep dive into transactions, blocks, contracts, and much more. Deep dive into Sophon and explore the network."
     />
-    <meta property="og:image" content="https://explorer.testnet.sophon.xyz/og.png" />
+    <meta property="og:image" content="https://explorer.sophon.xyz/og.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
